--- a/home.html
+++ b/home.html
@@ -191,6 +191,39 @@
         </div>
     </div>
 
+    <!-- Mobile menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu_overlay"></div>
+
+        <!-- Сontent -->
+        <div class="mobile-menu_content">
+
+            <!-- Mobile theme toogle -->
+            <div class="mobile-theme-toggle">
+                <label class="theme-toggle">
+                    <input type="checkbox" id="theme-toggle-mobile">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
+            <!-- Closed mobile menu -->
+            <button class="mobile-menu_close" id="closeMenu">✕</button>
+
+            <!-- Navigation -->
+            <div class="mobile-nav-wrapper">
+                <nav class="mobile-nav">
+                    <a href="/home.html" class="mobile-nav-home active">Home</a>
+                    <a href="/products.html" class="mobile-nav-our-products">Our Products</a>
+                    <a href="/about.html" class="mobile-nav-about-us">About Us</a>
+                </nav>
+            </div>
+
+            <div class="mobile-logo">
+                <img src="/assets/icons/logo-chromo.png" alt="ValeyevStudio Logo">
+            </div>
+        </div>
+    </div>
+
     <!-- Модальное окно проверки: Я не робот. -->
     <div id="captchaModal" class="captcha-modal" style="display: none;">
         <div class="captcha-content">
@@ -385,22 +418,6 @@
                 <br>
                 The subscription allows you to remove intrusive banners through the settings and access other
                 features.
-            </div>
-        </div>
-    </div>
-
-    <!-- Mobile menu -->
-    <div class="mobile-menu" id="mobileMenu">
-        <div class="mobile-menu__overlay"></div>
-        <div class="mobile-menu__content">
-            <button class="mobile-menu__close" id="closeMenu">✕</button>
-            <nav class="mobile-nav">
-                <a href="/home.html" class="mobile-nav-home active">Home</a>
-                <a href="/products.html" class="mobile-nav-our-products">Our Products</a>
-                <a href="/about.html" class="mobile-nav-about-us">About Us</a>
-            </nav>
-            <div class="mobile-logo">
-                <img src="/assets/icons/logo-chromo.png" alt="ValeyevStudio Logo">
             </div>
         </div>
     </div>
