Mobile menu fix

--- a/home.html
+++ b/home.html
@@ -167,7 +167,7 @@
                     </div>
                     <div class="dropdown-item" id="menuLogout">
                         <img src="assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
-                        <span class="menu-logout-text theme-text">Logout</span>
+                        <span class="menu-logout-text">Logout</span>
                     </div>
                 </div>
             </div>
