Add new page + fix bug

--- a/profile.html
+++ b/profile.html
@@ -209,7 +209,7 @@
             <!-- Navigation -->
             <div class="mobile-nav-wrapper">
                 <nav class="mobile-nav">
-                    <a href="/home.html" class="mobile-nav-home active">Home</a>
+                    <a href="/home.html" class="mobile-nav-home">Home</a>
                     <a href="/products.html" class="mobile-nav-our-products">Our Products</a>
                     <a href="/about.html" class="mobile-nav-about-us">About Us</a>
                 </nav>
