Add new page + fix bug

--- a/brand.html
+++ b/brand.html
@@ -31,9 +31,9 @@
 
         <!-- logo info -->
         <section class="brand-logoinfo-card">
-            <h2 class="brand-logoinfo-title theme-text">Логотип</h2>
+            <h2 class="brand-logoinfo-title theme-text" data-i18n="brand.logoinfo.title">Логотип</h2>
             <div class="brand-logoinfo-divider"></div>
-            <p class="brand-logoinfo-description theme-text">
+            <p class="brand-logoinfo-description theme-text" data-i18n="brand.logoinfo.description">
                 Логотип ValeyevStudio — единственный и главный символ нашей студии. Он представлен в двух версиях:
                 полная
                 содержит в себе иконку и текст, компактная — только иконку.<br><br>
@@ -45,10 +45,10 @@
 
         <!-- Product info -->
         <section class="brand-productinfo-card">
-            <h2 class="brand-productinfo-title theme-text">Наши продукты</h2>
+            <h2 class="brand-productinfo-title theme-text" data-i18n="brand.productinfo.title">Наши продукты</h2>
             <div class="brand-productinfo-divider"></div>
-            <p class="brand-productinfo-description theme-text">
-                У основных продуктов нашей студии есть фирменный дизайн и собственный Логотип.
+            <p class="brand-productinfo-description theme-text" data-i18n="brand.productinfo.description">
+                У основных продуктов нашей студии есть фирменный дизайн и собственный логотип.
                 Каждый логотип содержит иконку и текстовую часть.<br><br>
                 Иконка состоит из уникального знака продукта на квадратной форме с закруглёнными краями. Для текста
                 используется фирменный шрифт Mi Sans.
@@ -60,7 +60,7 @@
         <!-- Color info -->
         <div class="brand-card-color">
             <div class="brand-color-header">
-                <h2 class="brand-color-title theme-text">Цвета</h2>
+                <h2 class="brand-color-title theme-text" data-i18n="brand.color.title">Цвета</h2>
                 <div class="brand-color-divider"></div>
             </div>
             <div class="color-palette">
@@ -97,29 +97,29 @@
         <!-- Partner info -->
         <section class="brand-partnerinfo-card">
             <div class="partner-column left">
-                <h3 class="partner-title theme-text">Для медиа</h3>
-                <p class="partner-description">По вопросам медиапартнёрств и специальных проектов.</p>
+                <h3 class="partner-title theme-text" data-i18n="partner.media.title">Для медиа</h3>
+                <p class="partner-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и специальных проектов.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
-                <h3 class="partner-title theme-text">Представителям прессы</h3>
-                <p class="partner-description">Контакт пресс‑службы для обращений СМИ.</p>
+                <h3 class="partner-title theme-text" data-i18n="partner.press.title">Представителям прессы</h3>
+                <p class="partner-description" data-i18n="partner.press.description">Контакт пресс‑службы для обращений СМИ.</p>
                 <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
-                <h3 class="partner-title theme-text">Материалы ValeyevStudio</h3>
-                <p class="partner-description">Основные продукты и материалы нашей студии.</p>
-                <a href="#brand-material" class="partner-link">Ознакомиться</a>
+                <h3 class="partner-title theme-text" data-i18n="partner.materials.title">Материалы ValeyevStudio</h3>
+                <p class="partner-description" data-i18n="partner.materials.description">Основные продукты и материалы нашей студии.</p>
+                <a href="#brand-material" class="partner-link" data-i18n="partner.materials.link">Ознакомиться</a>
             </div>
         </section>
 
         <!-- Brands card info -->
         <div class="brand-cards-row-info">
             <div class="brand-info-card">
-                <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon">
-                <p class="brand-info-text theme-text">
+                <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon" data-i18n-alt="brand.info.iconAlt">
+                <p class="brand-info-text theme-text" data-i18n="brand.info.text">
                     Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке.
                 </p>
             </div>
@@ -131,6 +131,7 @@
         <div class="footer-content">
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
+            <a href="brand.html" class="footer-link nav-partners">Partners</a>
         </div>
         <div class="footer-social">
             <span class="social-platforms">Social:</span>
