Add new page + fix bug

--- a/brand.html
+++ b/brand.html
@@ -118,7 +118,7 @@
         <!-- Brands card info -->
         <div class="brand-cards-row-info">
             <div class="brand-info-card">
-                <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon" data-i18n-alt="brand.info.iconAlt">
+                <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon">
                 <p class="brand-info-text theme-text" data-i18n="brand.info.text">
                     Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке.
                 </p>
