--- a/brand.html
+++ b/brand.html
@@ -31,27 +31,27 @@
 
         <!-- logo info -->
         <section class="brand-logoinfo-card">
-            <h2 class="brand-logoinfo-title theme-text" data-i18n="brand.logoinfo.title">Логотип</h2>
+            <h2 class="brand-logoinfo-title theme-text" data-i18n="brand.logoinfo.title">Logo</h2>
             <div class="brand-logoinfo-divider"></div>
             <p class="brand-logoinfo-description theme-text" data-i18n="brand.logoinfo.description">
-                Логотип ValeyevStudio — единственный и главный символ нашей студии. Он представлен в двух версиях:
-                полная
-                содержит в себе иконку и текст, компактная — только иконку.<br><br>
-                Иконка состоит из квадратной формы с закруглёнными краями и текста VS расшифровка ValeyevStudio. Для
-                текста
-                используется фирменный шрифт Mi Sans.
+                The ValeyevStudio logo is the only and main symbol of our studio. It is available in two versions:
+                full
+                It contains an icon and text, while a compact one contains only an icon.<br><br>
+                The icon consists of a square shape with rounded edges and text VS decryption by ValeyevStudio. For
+                the text
+                the MiSans branded font is used.
             </p>
         </section>
 
         <!-- Product info -->
         <section class="brand-productinfo-card">
-            <h2 class="brand-productinfo-title theme-text" data-i18n="brand.productinfo.title">Наши продукты</h2>
+            <h2 class="brand-productinfo-title theme-text" data-i18n="brand.productinfo.title">Our Products</h2>
             <div class="brand-productinfo-divider"></div>
             <p class="brand-productinfo-description theme-text" data-i18n="brand.productinfo.description">
-                У основных продуктов нашей студии есть фирменный дизайн и собственный логотип.
-                Каждый логотип содержит иконку и текстовую часть.<br><br>
-                Иконка состоит из уникального знака продукта на квадратной форме с закруглёнными краями. Для текста
-                используется фирменный шрифт Mi Sans.
+                The main products of our studio have a corporate design and its own logo.
+                Each logo contains an icon and a text part.<br><br>
+                The icon consists of a unique product sign on a square shape with rounded edges. For the text
+                the MiSans branded font is used.
             </p>
         </section>
     </div>
@@ -60,7 +60,7 @@
         <!-- Color info -->
         <div class="brand-card-color">
             <div class="brand-color-header">
-                <h2 class="brand-color-title theme-text" data-i18n="brand.color.title">Цвета</h2>
+                <h2 class="brand-color-title theme-text" data-i18n="brand.color.title">Color</h2>
                 <div class="brand-color-divider"></div>
             </div>
             <div class="color-palette">
@@ -98,19 +98,22 @@
         <section class="brand-partnerinfo-card">
             <div class="partner-column left">
                 <h3 class="partner-title theme-text" data-i18n="partner.media.title">Для медиа</h3>
-                <p class="partner-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и специальных проектов.</p>
+                <p class="partner-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и
+                    специальных проектов.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
                 <h3 class="partner-title theme-text" data-i18n="partner.press.title">Представителям прессы</h3>
-                <p class="partner-description" data-i18n="partner.press.description">Контакт пресс‑службы для обращений СМИ.</p>
+                <p class="partner-description" data-i18n="partner.press.description">Контакт пресс‑службы для обращений
+                    СМИ.</p>
                 <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
                 <h3 class="partner-title theme-text" data-i18n="partner.materials.title">Материалы ValeyevStudio</h3>
-                <p class="partner-description" data-i18n="partner.materials.description">Основные продукты и материалы нашей студии.</p>
+                <p class="partner-description" data-i18n="partner.materials.description">Основные продукты и материалы
+                    нашей студии.</p>
                 <a href="#brand-material" class="partner-link" data-i18n="partner.materials.link">Ознакомиться</a>
             </div>
         </section>
