Brand fix localization

--- a/brand.html
+++ b/brand.html
@@ -18,7 +18,7 @@
     <main class="brand-page">
         <section class="brand-header">
             <img src="assets/icons/logo-chromo.png" alt="Логотип ValeyevStudio" class="brand-logo">
-            <h1 class="brand-title theme-text">Материал бренда ValeyevStudio</h1>
+            <h1 class="brand-title theme-text">ValeyevStudio brand material</h1>
             <p class="brand-description">
                 Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования.
                 <a href="about.html#rules-material" class="brand-rules-link">Читать правила</a>
