Brand fix localization

--- a/brand.html
+++ b/brand.html
@@ -18,7 +18,7 @@
     <main class="brand-page">
         <section class="brand-header">
             <img src="assets/icons/logo-chromo.png" alt="Логотип ValeyevStudio" class="brand-logo">
-            <h1 class="brand-title theme-text">ValeyevStudio brand material</h1>
+            <h1 class="brand-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand material</h1>
             <p class="brand-description">
                 Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования.
                 <a href="about.html#rules-material" class="brand-rules-link">Читать правила</a>
@@ -97,24 +97,24 @@
         <!-- Partner info -->
         <section class="brand-partnerinfo-card">
             <div class="partner-column left">
-                <h3 class="partner-title theme-text" data-i18n="partner.media.title">Для медиа</h3>
-                <p class="partner-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и
+                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">Для медиа</h3>
+                <p class="partner-description partner-media-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и
                     специальных проектов.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
-                <h3 class="partner-title theme-text" data-i18n="partner.press.title">Представителям прессы</h3>
-                <p class="partner-description" data-i18n="partner.press.description">Контакт пресс‑службы для обращений
+                <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Представителям прессы</h3>
+                <p class="partner-description partner-press-discription" data-i18n="partner.press.description">Контакт пресс‑службы для обращений
                     СМИ.</p>
                 <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
-                <h3 class="partner-title theme-text" data-i18n="partner.materials.title">Материалы ValeyevStudio</h3>
-                <p class="partner-description" data-i18n="partner.materials.description">Основные продукты и материалы
+                <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">Материалы ValeyevStudio</h3>
+                <p class="partner-description partner-materials-discription" data-i18n="partner.materials.description">Основные продукты и материалы
                     нашей студии.</p>
-                <a href="#brand-material" class="partner-link" data-i18n="partner.materials.link">Ознакомиться</a>
+                <a href="#brand-material" class="partner-link partner-material-link" data-i18n="partner.materials.link">Ознакомиться</a>
             </div>
         </section>
 
