--- a/brand.html
+++ b/brand.html
@@ -20,8 +20,8 @@
             <img src="assets/icons/logo-chromo.png" alt="Логотип ValeyevStudio" class="brand-logo">
             <h1 class="brand-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand material</h1>
             <p class="brand-description">
-                Загружайте фирменные наши материалы и ознакомьтесь с правилами их использования.
-                <a href="about.html#rules-material" class="brand-rules-link">Читать правила</a>
+                Download our official materials and read the rules for their use.
+                <a href="about.html#rules-material" class="brand-rules-link">Read the rules</a>
             </p>
         </section>
     </main>
@@ -97,24 +97,21 @@
         <!-- Partner info -->
         <section class="brand-partnerinfo-card">
             <div class="partner-column left">
-                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">Для медиа</h3>
-                <p class="partner-description partner-media-description" data-i18n="partner.media.description">По вопросам медиапартнёрств и
-                    специальных проектов.</p>
+                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">For media</h3>
+                <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
-                <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Представителям прессы</h3>
-                <p class="partner-description partner-press-discription" data-i18n="partner.press.description">Контакт пресс‑службы для обращений
-                    СМИ.</p>
+                <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Press Representatives</h3>
+                <p class="partner-description partner-press-discription" data-i18n="partner.press.description">Press office contact for media inquiries.</p>
                 <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
-                <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">Материалы ValeyevStudio</h3>
-                <p class="partner-description partner-materials-discription" data-i18n="partner.materials.description">Основные продукты и материалы
-                    нашей студии.</p>
-                <a href="#brand-material" class="partner-link partner-material-link" data-i18n="partner.materials.link">Ознакомиться</a>
+                <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">ValeyevStudio Materials</h3>
+                <p class="partner-description partner-materials-discription" data-i18n="partner.materials.description">Main products and materials of our studio.</p>
+                <a href="#brand-material" class="partner-link partner-material-link" data-i18n="partner.materials.link">Learn More</a>
             </div>
         </section>
 
@@ -123,7 +120,7 @@
             <div class="brand-info-card">
                 <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon">
                 <p class="brand-info-text theme-text" data-i18n="brand.info.text">
-                    Мы рады предоставлять наши услуги, технологии и материалы как можно более широко на мировом рынке.
+                    We are happy to provide our services, technologies, and materials as widely as possible in the global market.
                 </p>
             </div>
         </div>
