--- a/brand.html
+++ b/brand.html
@@ -18,7 +18,7 @@
     <main class="brand-page">
         <section class="brand-header">
             <img src="assets/icons/logo-chromo.png" alt="Логотип ValeyevStudio" class="brand-logo">
-            <h1 class="brand-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand material</h1>
+            <h1 class="brand-title brand-head-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand material</h1>
             <p class="brand-description">
                 Download our official materials and read the rules for their use.
                 <a href="about.html#rules-material" class="brand-rules-link">Read the rules</a>
