--- a/brand.html
+++ b/brand.html
@@ -96,8 +96,9 @@
 
         <!-- Partner info -->
         <section class="brand-partnerinfo-card">
+            
             <div class="partner-column left">
-                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">For media</h3>
+                <h3 class="partner-title theme-text partner-media-title" data-i18n="partner.media.title">For media</h3>
                 <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
