Brand fix localization v7 fix

--- a/brand.html
+++ b/brand.html
@@ -96,22 +96,22 @@
 
         <!-- Partner info -->
         <section class="brand-partnerinfo-card">
-            
+
             <div class="partner-column left">
-                <h3 class="partner-title theme-text partner-media-title" data-i18n="partner.media.title">For media</h3>
+                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">For media</h3>
                 <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
                 <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Press Representatives</h3>
-                <p class="partner-description partner-press-discription" data-i18n="partner.press.description">Press office contact for media inquiries.</p>
+                <p class="partner-description partner-press-description" data-i18n="partner.press.description">Press office contact for media inquiries.</p>
                 <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
                 <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">ValeyevStudio Materials</h3>
-                <p class="partner-description partner-materials-discription" data-i18n="partner.materials.description">Main products and materials of our studio.</p>
+                <p class="partner-description partner-materials-description" data-i18n="partner.materials.description">Main products and materials of our studio.</p>
                 <a href="#brand-material" class="partner-link partner-material-link" data-i18n="partner.materials.link">Learn More</a>
             </div>
         </section>
