Brand fix localization v7 fix

--- a/brand.html
+++ b/brand.html
@@ -98,7 +98,7 @@
         <section class="brand-partnerinfo-card">
 
             <div class="partner-column left">
-                <h3 class="partner-title partner-media-title theme-text" data-i18n="partner.media.title">For media</h3>
+                <h3 class="partner-title media-partner-title theme-text" data-i18n="partner.media.title">For media</h3>
                 <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
             </div>
