--- a/profile.html
+++ b/profile.html
@@ -195,12 +195,11 @@
         <!-- Сontent -->
         <div class="mobile-menu_content">
 
-            <!-- Mobile theme toogle -->
+            <!-- Mobile button theme switch -->
             <div class="mobile-theme-toggle">
-                <label class="theme-toggle">
-                    <input type="checkbox" id="theme-toggle-mobile">
-                    <span class="slider"></span>
-                </label>
+                <button id="mobileThemeBtn">
+                    <img id="mobileThemeIcon" src="/assets/icons/sun.png" alt="Theme Icon" />
+                </button>
             </div>
 
             <!-- Closed mobile menu -->
