--- a/home.html
+++ b/home.html
@@ -200,8 +200,8 @@
 
             <!-- Mobile button theme switch -->
             <div class="mobile-theme-toggle">
-                <button id="mobileThemeBtn">
-                    <img id="mobileThemeIcon" src="/assets/icons/sun.png" alt="Theme Icon" />
+                <button id="mobileThemeBtn" class="theme-button">
+                    <img id="mobileThemeIcon" src="/assets/icons/sun.svg" alt="Theme Icon" class="theme-icon" />
                 </button>
             </div>
 
