Update about page v2

--- a/about.html
+++ b/about.html
@@ -305,8 +305,8 @@
 
         <!-- Панель управления -->
         <div class="controls">
-            <div class="dot active" onclick="showBlock(0)"></div>
-            <div class="dot" onclick="showBlock(1)"></div>
+            <div class="dot active"></div>
+            <div class="dot"></div>
             <!-- Вторая, если нужно добавить третью и следующие указываем 2,3,4 -->
         </div>
     </div>
@@ -321,7 +321,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="user-agreement-btn">
                 User agreement
-                <img class="arrow theme-icon" src="/assets/icons/angle-small-down.svg" alt="arrow">
+                <img class="arrow theme-icon" src="assets\icons\angle-small-down.svg" alt="arrow">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -366,7 +366,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="privacy-policy-btn">
                 Privacy policy
-                <img class="arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="arrow">
+                <img class="arrow theme-icon" src="assets\icons\angle-small-down.svg" alt="arrow">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -434,15 +434,12 @@
     <script src="js/menu.js"></script>
     <script src="js/themeswitch.js"></script>
     <script src="js/translate-language.js"></script>
+    <script src="js/about.js"></script>
     <script src="js/captcha.js"></script>
     <script src="js/player.js"></script>
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
     <script src="js/pushnotify.js"></script>
-
-    <!-- Контроллеры -->
-    <script src="js/about_controller.js"></script>
-    <script src="js/license_controller.js"></script>
 </body>
 
 </html>
