Update about page v4

--- a/about.html
+++ b/about.html
@@ -137,8 +137,8 @@
             <!-- Аватар с выпадающим меню -->
             <div class="user-menu" style="display: none;">
                 <div class="user-avatar" id="avatarToggle">
-                    <img src="assets/icons/user.png" alt="User Avatar" class="avatar-img theme-icon">
-                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
+                    <img src="/assets/icons/user.png" alt="User Avatar" class="avatar-img theme-icon">
+                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
                 </div>
 
                 <div class="dropdown-panel" id="userDropdown">
@@ -151,19 +151,19 @@
                         <div class="balance-divider"></div>
                     </div>
                     <div class="dropdown-item" id="menuProfile">
-                        <img src="assets/icons/user.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/user.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-profile-text theme-text">My profile</span>
                     </div>
                     <div class="dropdown-item" id="menuSettings">
-                        <img src="assets/icons/settings.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/settings.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-settings-text theme-text">Settings</span>
                     </div>
                     <div class="dropdown-item" id="menuSupport">
-                        <img src="assets/icons/help.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/help.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-support-text theme-text">Support</span>
                     </div>
                     <div class="dropdown-item" id="menuLogout">
-                        <img src="assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-logout-text theme-text">Logout</span>
                     </div>
                 </div>
@@ -175,12 +175,12 @@
     <div class="overlay"></div>
     <div class="dropdown-menu-item" id="productsMenu">
         <div class="product-item">
-            <img src="assets/images/PixelFPS.png" alt="Product 1">
+            <img src="/assets/images/PixelFPS.png" alt="Product 1">
             <p class="theme-text">PixelFPS</p>
             <div class="has-tooltip">
                 <button id="downloadBtn" class="download-btn">
                     <span class="button-text">Download</span> <!-- Текст кнопки -->
-                    <img class="download-icon theme-icon" src="assets/icons/download.svg" alt="Download Icon" />
+                    <img class="download-icon theme-icon" src="/assets/icons/download.svg" alt="Download Icon" />
                     <!-- Иконка -->
                 </button>
                 <span class="tooltip theme-text" data-tooltip="download-description">Download the latest version</span>
@@ -224,7 +224,7 @@
     <div id="captchaModal" class="captcha-modal" style="display: none;">
         <div class="captcha-content">
             <!-- Иконка в центре -->
-            <img src="assets/icons/robot.png" alt="Icon" class="captcha-icon">
+            <img src="/assets/icons/robot.png" alt="Icon" class="captcha-icon">
             <!-- Заголовок -->
             <p class="captcha-title theme-text">Confirm that you are not a robot</p>
             <!-- Чекбокс с текстом -->
@@ -266,7 +266,7 @@
 
     <div class="aboutcompany-block two-column">
         <div class="aboutcompany-image">
-            <img src="assets/icons/logo-chromo.png" alt="ValeyevStudio" />
+            <img src="/assets/icons/logo-chromo.png" alt="ValeyevStudio" />
         </div>
         <div class="aboutcompany-text theme-text">
             <p>
@@ -290,14 +290,14 @@
         <h1 class="team-heading theme-text">Our team</h1>
 
         <div class="about-block active">
-            <img src="assets/images/nikitavaleyev.png" alt="Photo">
+            <img src="/assets/images/nikitavaleyev.png" alt="Photo">
             <div class="name theme-text">Nikita Valeyev</div>
             <div class="badge">Creator</div>
             <div class="badge">Designer</div>
         </div>
 
         <div class="about-block">
-            <img src="assets/images/kristy_support.jpg" alt="Photo">
+            <img src="/assets/images/kristy_support.jpg" alt="Photo">
             <div class="name theme-text">Kristy Support</div>
             <div class="badge">Support</div>
             <div class="badge">Tech support</div>
@@ -321,7 +321,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="user-agreement-btn">
                 User agreement
-                <img class="arrow theme-icon" src="assets\icons\angle-small-down.svg" alt="arrow">
+                <img class="arrow theme-icon" src="/assets/icons/angle-small-down.svg" alt="arrow">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -366,7 +366,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="privacy-policy-btn">
                 Privacy policy
-                <img class="arrow theme-icon" src="assets\icons\angle-small-down.svg" alt="arrow">
+                <img class="arrow theme-icon" src="/assets/icons/angle-small-down.svg" alt="arrow">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
