Update about page v4

--- a/about.html
+++ b/about.html
@@ -321,7 +321,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="user-agreement-btn">
                 User agreement
-                <img class="arrow theme-icon" src="/assets/icons/angle-small-down.svg" alt="arrow">
+                <img src="/assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -366,7 +366,7 @@
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="privacy-policy-btn">
                 Privacy policy
-                <img class="arrow theme-icon" src="/assets/icons/angle-small-down.svg" alt="arrow">
+                <img src="/assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
