Update about page v6

--- a/about.html
+++ b/about.html
@@ -320,8 +320,8 @@
             to the terms of this agreement. </p>
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="user-agreement-btn">
-                User agreement
-                <img src="/assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
+                <span class="btn-useragreement-text">User agreement</span>
+                <img src="assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -335,7 +335,7 @@
                 <p class="section1-1">1.1. The user receives a limited, non-exclusive, non-transferable right to use the
                     software.</p>
                 <p class="section1-2">1.2. The software is provided \"as is\" without any warranties.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="section2-title">2. Prohibited Actions</h4>
                 <p class="section2-1">2.1. The user is prohibited from:</p>
@@ -346,16 +346,16 @@
                 </ul>
                 <p class="section2-2">2.2. When posted on third-party sites — only the original version with author
                     attribution.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="section3-title">3. Updates and Support</h4>
                 <p class="section3-1">3.1. The developer may change functionality and release updates.</p>
                 <p class="section3-2">3.2. The developer is not responsible for failures.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="section4-title">4. Liability</h4>
                 <p class="section4-1">4.1. Use the software at your own risk.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="section5-title">5. Changes to Terms</h4>
                 <p class="section5-1">5.1. The agreement may be changed, the current version is on the official website.
@@ -365,8 +365,8 @@
 
         <div class="legal-item">
             <button class="legal-toggle theme-text" id="privacy-policy-btn">
-                Privacy policy
-                <img src="/assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
+                <span class="btn-privacy-text">Privacy policy</span>
+                <img src="assets/icons/angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
             </button>
             <div class="legal-content theme-text">
                 <div class="textlicense-data theme-text">
@@ -379,27 +379,27 @@
                     <li>Account data: login, password, subscription status.</li>
                     <li>Personal data: full name, date of birth, region, city.</li>
                 </ul>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="privacy-title2">2. How is the data used?</h4>
                 <ul class="privacy-usage-list">
                     <li>For authorization, personalization, and access to premium features.</li>
                 </ul>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator"> 
 
                 <h4 class="privacy-title3">3. Data Protection</h4>
                 <p class="privacy-3-1">3.1. We use modern protection methods, including encryption.</p>
                 <p class="privacy-3-2">3.2. Access is only available to ValeyevStudio employees.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="privacy-title4">4. Sharing with third parties</h4>
                 <p class="privacy-4-1">4.1. Мы не передаём данные третьим лицам без вашего согласия.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="privacy-title5">5. Data deletion</h4>
                 <p class="privacy-5-1">Send a request for deletion to: <a
                         href="mailto:valeyevstudio@gmail.com">valeyevstudio@gmail.com</a>.</p>
-                <hr class="separator"> <!-- Полоса -->
+                <hr class="separator">
 
                 <h4 class="privacy-title6">6. Changes</h4>
                 <p class="privacy-6-1">6.1. We may change the policy and notify users about it.</p>
